...
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_poster"
                app:layout_collapseMode="parallax"
                tools:src="@mipmap/ic_launcher"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/movieDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                tools:title="Movie name"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
...
